Change page title from '无限数量弹窗提示' to '我想你了'

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>无限数量弹窗提示</title>
+    <title>我想你了</title>
     <style>
         body {
             margin: 0;
