--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>我想你了</title>
+    <title>想你了</title>
     <style>
         body {
             margin: 0;
